# drive-deposits

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.for.compose.grpc  Dockerfile.localstack  Dockerfile.rest.gateway  LICENSE  README.md  compose.grpc.yaml  compose.rest.yaml  grpc-server.yaml  justfile  rest-server.yaml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: rust.yml
drive-deposits-cal-types/: Cargo.toml
drive-deposits-cal-types/src/: cal_types.rs  convert.rs  lib.rs  math.rs
drive-deposits-cal-types/src/convert/: from_cal_event_source.rs  from_cal_grpc_response.rs  from_grpc_cal_request.rs
drive-deposits-cal-types/src/math/: accumulator.rs  compound_interest.rs  engine.rs  growth.rs  individual_calculation_error.rs  maturity_date.rs  outcome.rs  simple_interest.rs  total.rs
drive-deposits-cal-types/tests/: test_calculate_portfolio.rs  test_compound_interest.rs  test_maturity_date.rs  test_simple_interest.rs
drive-deposits-cal-types/tests/helper/: enable_tracing.rs  mod.rs  test_data.rs
drive-deposits-check-cmd/: Cargo.toml
drive-deposits-check-cmd/src/: main.rs
drive-deposits-check-cmd/src/portfolio/: calculate.rs
drive-deposits-check-cmd/tests/: enable_tracing.rs  test_delta_calculator_cli.rs
drive-deposits-check-cmd/tests/data/: portfolio_request_two_banks_json_invalid.json  portfolio_request_two_banks_json_valid.json
drive-deposits-event-source/: Cargo.toml  samconfig.toml  template.yaml
drive-deposits-event-source/src/: eb.rs  lib.rs  payload_types.rs
drive-deposits-grpc-server/: Cargo.toml
drive-deposits-grpc-server/data/: grpc_postman_calculate_for_period_request_valid.json  grpc_postman_response_for_valid.json
drive-deposits-grpc-server/src/: lib.rs  main.rs  portfolio.rs  service_router.rs
drive-deposits-grpc-server/src/portfolio/: calculate.rs  grpc_status_handler.rs
drive-deposits-lambda-db-types/: Cargo.toml
drive-deposits-lambda-db-types/src/: db_item_types.rs  lib.rs  query_response_types.rs
drive-deposits-lambda-db-types/src/convert/: reader.rs  writer.rs
drive-deposits-lambda-db-types/src/convert/reader/: from_bank_level_item_to_by_bank_response.rs  from_deposit_level_item_to_deposit_response.rs  from_hashmap_av_to_bank_level_item.rs  from_hashmap_av_to_deposit_level_item.rs  from_hashmap_av_to_portfolio_level_item.rs  from_portfolio_level_item_to_portfolio_response.rs  with_level_context.rs
drive-deposits-lambda-db-types/src/convert/writer/: from_bank_item_to_hashmap_av.rs  from_deposit_level_item_to_hashmap_av.rs  from_portfolio_level_item_to_hashmap_av.rs  from_rest_to_bank_level_items_wrapper.rs  from_rest_to_deposit_level_items_wrapper.rs  from_rest_to_portfolio_level_item.rs  with_level_context.rs
drive-deposits-lambda-dynamodb-reader/: .gitignore  Cargo.toml  request.http  samconfig.toml  template.yaml
drive-deposits-lambda-dynamodb-reader/data/: apigw-event-request-query-for-banks-delta-growth.json  apigw-event-request-query-for-deposits-delta-growth.json  apigw-event-request-query-for-deposits-maturity-date.json  apigw-event-request-query-for-portfolios-delta-growth.json
drive-deposits-lambda-dynamodb-reader/src/: dynamodb.rs  handler_error.rs  lib.rs  request_error.rs
drive-deposits-lambda-dynamodb-reader/src/dynamodb/: query.rs
drive-deposits-logs-lambda-target/: .gitignore  Cargo.toml  samconfig.toml  template.yaml
drive-deposits-logs-lambda-target/data/: drive-deposits-event-banks-level.json
drive-deposits-logs-lambda-target/src/: dynamodb.rs
drive-deposits-logs-lambda-target/src/dynamodb/: add.rs
drive-deposits-proto-grpc-types/: Cargo.toml  build.rs
drive-deposits-proto-grpc-types/src/: convert.rs  lib.rs
drive-deposits-proto-grpc-types/src/convert/: from_grpc_rest_response.rs  from_rest_grpc_request.rs
drive-deposits-proto-grpc-types/v1/: drivedeposits.proto
drive-deposits-rest-gateway-server/: Cargo.toml  request.http
drive-deposits-rest-gateway-server/data/: portfolio_request_invalid_json_structure.json  portfolio_request_invalid_period_unit_account_type_decimal_bank_tz_start_date.json  portfolio_request_valid_90_days_delta_period.json  portfolio_request_valid_greater_amount_investments.json  rest_request_invalid_decimal.json  rest_request_valid.json  rest_request_valid_6_months_delta_period.json  rest_request_valid_lesser_amount_investments.json  rest_response_for_valid.json  rest_response_with_processing_errors_no_panic_outcome_maturity_calculation_not_present.json
drive-deposits-rest-gateway-server/src/: drive_deposits_client.rs  lib.rs  main.rs  service_router.rs
drive-deposits-rest-gateway-server/src/drive_deposits_client/: app_error.rs  request_error.rs
drive-deposits-rest-types/: Cargo.toml
drive-deposits-rest-types/src/: lib.rs  rest_types.rs
