[workspace]
members = [
    # -- Libraries
    "drive-deposits-event-source",
    "drive-deposits-cal-types",
    "drive-deposits-rest-types",
    "drive-deposits-proto-grpc-types",
    "drive-deposits-lambda-db-types",
    # -- Binaries
    "drive-deposits-check-cmd",
    "drive-deposits-grpc-server",
    "drive-deposits-rest-gateway-server",
    "drive-deposits-logs-lambda-target",
    "drive-deposits-lambda-dynamodb-reader",
]
default-members = [
    # -- Libraries
    "drive-deposits-event-source",
    "drive-deposits-cal-types",
    "drive-deposits-rest-types",
    "drive-deposits-proto-grpc-types",
    "drive-deposits-lambda-db-types",
    # -- Binaries
    "drive-deposits-check-cmd",
    "drive-deposits-grpc-server",
    "drive-deposits-rest-gateway-server",
    "drive-deposits-logs-lambda-target",
    "drive-deposits-lambda-dynamodb-reader",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
async-trait = "0.1.85"
aws-config = "1.5.13"
aws-sdk-dynamodb = "1.58.0"
aws-sdk-eventbridge = "1.56.0"
aws_lambda_events = "0.16.0"
axum = "0.8.1"
chrono = "0.4.39"
chrono-tz = "0.10.0"
clap = "4.5.24"
heck = "0.5.0"
lambda_http = "0.14.0"
lambda_runtime = "0.13.0"
log = "0.4.22"
mockall = "0.13.1"
once_cell = "1.20.2"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
prost = "0.13.4"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = "1.0.217"
serde_json = "1.0.135"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0.9"
tokio = "1.42.0"
tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
tower = "0.5.2"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"
validator = "0.19.0"
