[package]
name = "drive-deposits-cal-types"
version = "0.60.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = ["maths"] }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
once_cell = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
heck = { workspace = true }
# workspace member depdenencies
# proto generated dependency here the drive-deposits-proto-grpc-types is still package
# name so with dashes
drive-deposits-proto-grpc-types = { path = "../drive-deposits-proto-grpc-types" }
drive-deposits-event-source = { path = "../drive-deposits-event-source" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
