[package]
name = "drive-deposits-check-cmd"
version = "0.20.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.8", features = ["derive"] }
rust_decimal = { version = "1.35.0", features = ["maths"] }
once_cell = "1.19.0"
validator = { version = "0.18.1", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
# proto generated dependency here the drive-deposits-proto-grpc-types is still package
# name so with dashes
drive-deposits-proto-grpc-types = { path = "../drive-deposits-proto-grpc-types" }
drive-deposits-cal-types = { path = "../drive-deposits-cal-types" }
drive-deposits-event-source = { path = "../drive-deposits-event-source" }



[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
#pretty_assertions = "1.4.0"

[features]
localstack_aws_deploy = []
