[package]
name = "drive-deposits-check-cmd"
version = "0.60.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.24", features = ["derive"] }
once_cell = "1.20.2"
validator = { version = "0.19.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
# proto generated dependency here the drive-deposits-proto-grpc-types is still package
# name so with dashes
drive-deposits-proto-grpc-types = { path = "../drive-deposits-proto-grpc-types" }
drive-deposits-cal-types = { path = "../drive-deposits-cal-types" }
drive-deposits-event-source = { path = "../drive-deposits-event-source" }



[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
#pretty_assertions = "1.4.0"

[features]
localstack_aws_deploy = []
