[package]
name = "drive-deposits-check-cmd"
version = "0.80.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
once_cell = { workspace = true }
validator = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
# proto generated dependency here the drive-deposits-proto-grpc-types is still package
# name so with dashes
drive-deposits-proto-grpc-types = { path = "../drive-deposits-proto-grpc-types" }
drive-deposits-cal-types = { path = "../drive-deposits-cal-types" }
drive-deposits-event-source = { path = "../drive-deposits-event-source" }



[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
#pretty_assertions = "1.4.0"

[features]
localstack_aws_deploy = []
