[package]
name = "drive-deposits-event-source"
version = "0.60.0"
edition = "2021"


[dependencies]
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = "1.56.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
thiserror = "2.0.9"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
log = "0.4.22"

[dev-dependencies]
pretty_assertions = "1.4.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.95"
