[package]
name = "drive-deposits-event-source"
version = "0.70.0"
edition = "2021"


[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-eventbridge = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
