[package]
name = "drive-deposits-grpc-server"
version = "0.60.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.42.0", features = ["full"] }

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
# proto generated dependency here the drive-deposits-proto-grpc-types is still package
# name so with dashes
drive-deposits-proto-grpc-types = { path = "../drive-deposits-proto-grpc-types" }
drive-deposits-cal-types = { path = "../drive-deposits-cal-types" }
drive-deposits-event-source = { path = "../drive-deposits-event-source" }
