[package]
name = "drive-deposits-grpc-server"
version = "0.80.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
# proto generated dependency here the drive-deposits-proto-grpc-types is still package
# name so with dashes
drive-deposits-proto-grpc-types = { path = "../drive-deposits-proto-grpc-types" }
drive-deposits-cal-types = { path = "../drive-deposits-cal-types" }
drive-deposits-event-source = { path = "../drive-deposits-event-source" }
