[package]
name = "drive-deposits-lambda-db-types"
version = "0.50.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
rust_decimal = { version = "1.35.0", features = ["maths"] }
aws-sdk-dynamodb = "1.39.1"
tracing = "0.1.40"
# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }