[package]
name = "drive-deposits-lambda-db-types"
version = "0.60.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
rust_decimal = { version = "1.36.0", features = ["maths"] }
aws-sdk-dynamodb = "1.58.0"
tracing = "0.1.41"
# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
