[package]
name = "drive-deposits-lambda-db-types"
version = "0.60.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["maths"] }
aws-sdk-dynamodb = { workspace = true }
tracing = { workspace = true }
# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
