[package]
name = "drive-deposits-lambda-dynamodb-reader"
version = "0.60.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.58.0"
lambda_http = "0.14.0"
thiserror = "2.0.9"
tracing = "0.1.41"
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1", features = ["macros"] }
# workspace member depdenencies
drive-deposits-lambda-db-types = { path = "../drive-deposits-lambda-db-types" }

# uuid added in different style
[dependencies.uuid]
version = "1.11.0"
features = ["v4"]

[[bin]]
name = "by_level_lambda_reader"
path = "src/bin/by_level_lambda_reader.rs"
