[package]
name = "drive-deposits-lambda-dynamodb-reader"
version = "0.60.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }
lambda_http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
# workspace member depdenencies
drive-deposits-lambda-db-types = { path = "../drive-deposits-lambda-db-types" }
uuid = { workspace = true, features = ["v4"] }

[[bin]]
name = "by_level_lambda_reader"
path = "src/bin/by_level_lambda_reader.rs"
