[package]
name = "drive-deposits-logs-lambda-target"
version = "0.30.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.39.1"
aws_lambda_events = "0.15.1"
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
tracing = "0.1.40"
# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
drive-deposits-lambda-db-types = { path = "../drive-deposits-lambda-db-types" }


[[bin]]
name = "by_level_lambda_writer"
path = "src/bin/by_level_lambda_writer.rs"