[package]
name = "drive-deposits-logs-lambda-target"
version = "0.60.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.58.0"
aws_lambda_events = "0.16.0"
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
tracing = "0.1.41"
# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
drive-deposits-lambda-db-types = { path = "../drive-deposits-lambda-db-types" }


[[bin]]
name = "by_level_lambda_writer"
path = "src/bin/by_level_lambda_writer.rs"
