[package]
name = "drive-deposits-logs-lambda-target"
version = "0.80.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
drive-deposits-lambda-db-types = { path = "../drive-deposits-lambda-db-types" }


[[bin]]
name = "by_level_lambda_writer"
path = "src/bin/by_level_lambda_writer.rs"
