[package]
name = "drive-deposits-proto-grpc-types"
version = "0.30.0"
edition = "2021"

[dependencies]
prost = "0.13.2"
tonic = "0.12.2"
tracing = "0.1.40"
heck = "0.5.0"

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }

[build-dependencies]
tonic-build = "0.12.0"