[package]
name = "drive-deposits-proto-grpc-types"
version = "0.60.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
tonic = "0.12.3"
tracing = "0.1.41"
heck = "0.5.0"

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }

[build-dependencies]
tonic-build = "0.12.3"
