[package]
name = "drive-deposits-proto-grpc-types"
version = "0.60.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
heck = { workspace = true }

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }

[build-dependencies]
tonic-build = { workspace = true }
