[package]
name = "drive-deposits-rest-gateway-server"
version = "0.60.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
validator = { version = "0.19.0", features = ["derive"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# tower and tower-http
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
mockall = "0.13.1"
async-trait = "0.1.85"

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
# proto generated dependency here the drive-deposits-proto-grpc-types is still package
# name so with dashes
drive-deposits-proto-grpc-types = { path = "../drive-deposits-proto-grpc-types" }


[dev-dependencies]
pretty_assertions = "1.4.1"
