[package]
name = "drive-deposits-rest-gateway-server"
version = "0.60.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
validator = { workspace = true, features = ["derive"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# tower and tower-http
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
mockall = { workspace = true }
async-trait = { workspace = true }

# workspace member depdenencies
drive-deposits-rest-types = { path = "../drive-deposits-rest-types" }
# proto generated dependency here the drive-deposits-proto-grpc-types is still package
# name so with dashes
drive-deposits-proto-grpc-types = { path = "../drive-deposits-proto-grpc-types" }


[dev-dependencies]
pretty_assertions = { workspace = true }
