[package]
name = "drive-deposits-rest-types"
version = "0.50.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
validator = { version = "0.18.1", features = ["derive"] }
rust_decimal = { version = "1.35.0" }
strum = "0.26"
strum_macros = "0.26"
chrono = "0.4.38"
chrono-tz = "0.9.0"