[package]
name = "drive-deposits-rest-types"
version = "0.60.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
validator = { version = "0.19.0", features = ["derive"] }
rust_decimal = { version = "1.36.0" }
strum = "0.26"
strum_macros = "0.26"
chrono = "0.4.39"
chrono-tz = "0.10.0"
