[package]
name = "drive-deposits-rest-types"
version = "0.60.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
validator = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
